Added week 3 assignment solution

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,3 +1,15 @@
-.navbar {
-    background-color: grey;
+#options-text {
+    background-color: aqua;
+    color: black;
+    text-align: center;
+}
+
+#menu-title {
+    font-size: 1.4em;
+    font-style: bold;
+}
+
+#main-content {
+    background-color: cadetblue;
+    color: black;
 }
