--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -4,7 +4,12 @@
     text-align: center;
 }
 
-#menu-title {
+#page-title {
+    font-size: 1.8em;
+    font-style: bold;
+}
+
+#item-title {
     font-size: 1.4em;
     font-style: bold;
 }
